Thu Jul 17 14:46:45 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (UpdateMoveList): use Output* functions instead of
	hardcoded logic.

Thu Jul 17 12:29:20 2003  Joern Thyssen  <jth@gnubg.org>

	Some changes to the match statistics:
	(a) output ppg advantage for money game
	(b) REMOVE output of abs. fibs rating
	(c) add output of relative fibs rating based on luck adj. results

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): see above.

Wed Jul 16 21:28:23 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandHint): move code into a set of subroutines.
	* gnubg.c (CommandRollout): call new functions HintCube and HintChequer.

Wed Jul 16 21:21:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkoptions.c: introduce gui equivalent to "set output digits ..."
	(suggested by Olivier Croisille)

Wed Jul 16 18:49:11 2003  Joern Thyssen  <jth@gnubg.org>

	Introduce flag to set the numbers of digits output for
	probabilities and equities.
	(derived from bug #4236 by Ian Shaw)

	* gnubg.c: new command "set output digits ..."			
	* text.c (OutputEquity, OutputMoneyEquity, OutputEquityScale,
	OutputEquityDiff, OutputMWC, OutputPercent): generate format
	dynamically using new flag fOutputDigits
	* progress.c (GTKRolloutProgress): use Output* functions instead
	of hardcoded logic.

Wed Jul 16 15:57:01 2003  Joern Thyssen  <jth@gnubg.org>

	Revert changes dated Wed Jul  9 10:32:08 2003 pending
	discussion on bug-gnubg@gnu.org

	* text.c

Wed Jul 16 14:57:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): only save rollout into movelist, if
	this is a rollout of a move!
	(bug #4313 reported by Ian Shaw)

Wed Jul 16 12:21:20 2003  Joern Thyssen  <jth@gnubg.org>

	Change rollouts routines to accept a progress callback instead
	of currently hardcoded GTK+ calls.

	* rollout.c (GeneralEvaluation, GneralEvaluationR,
	GeneralCubeDecision, GeneralCubeDecisionR): change prototype to